remove canvas pad/marg props; fix misalignment

--- a/sprite-test/style.css
+++ b/sprite-test/style.css
@@ -32,10 +32,18 @@ body {
     grid-area: 2 / 2 / 2 / 2; 
     image-rendering: pixelated;
 
-    width: 100%;
-    height: 100%;
+	align-self: baseline;
+	justify-self: center;
+    
+    &:not(.initialized) {        
+        /* temp props used for canvas alignment */
+        width: 100%;
+        height: 100%;
+    }
 
-    border: 1px dashed hsl(0, 0%, 40%);
+    &.initialized {
+        border: 1px dashed hsl(0, 0%, 40%);
+    }
 }
 
 .gui-container {
@@ -158,4 +166,8 @@ button {
 
 .icon.invert {
     filter: invert(53%);
+}
+
+.tile-button {
+    
 }
